Updated hedgie logo position to fix overlapping issue

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -3,29 +3,31 @@
   flex-direction: column;
   animation: fadeIn 0.2s ease-in-out;
   padding-bottom: 8px;
-  z-index: 1000;
-  position: fixed;
+  position: relative;
   width: 100%;
   background-color: #290443;
   text-align: center;
-
+  z-index: 100;
 }
 
 .show {
   display: flex;
   opacity: 1;
+  z-index: 100;
 }
 
 .menu-item {
   color: #ffffff;
   background-color: #290443;
   padding: 8px;
+  z-index: 100;
 }
 
 .menu-item:hover {
   color: #ffffff;
   background-color: #583b6e;
   padding-top: 8px;
+  z-index: 100;
 }
 
 @keyframes fadeIn {
